# ai-ssh

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.sanshu-memory/: memories.json
.sanshu-memory/backup/: metadata.json.bak
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: check_clone.rs  db.rs  lib.rs  main.rs  models.rs  provider_utils.rs  sftp.rs  ssh.rs
src-tauri/src/commands/: ai_chat.rs  mod.rs  provider.rs  server.rs  sftp.rs  ssh.rs
src-tauri/src/services/: mod.rs  provider_service.rs  server_service.rs
src/components/editor/: FileEditorWindow.tsx
src/components/layout/: MainContent.tsx  Sidebar.tsx  SidebarTransferPanel.tsx
src/components/providers/: ProviderForm.tsx  ProviderList.tsx
src/components/servers/: ServerForm.tsx  ServerList.tsx
src/components/terminal/: AiChatPanel.tsx  ChmodModal.tsx  FileExplorer.css  FileExplorer.tsx  FileTree.tsx  HorizontalDivider.css  HorizontalDivider.tsx  ResizableDivider.tsx  TerminalView.tsx  TransferPanel.css  TransferPanel.tsx
src/lib/: utils.ts
src/stores/: chatStore.ts  providerStore.ts  serverStore.ts  sftpStore.ts  terminalDirectoryStore.ts  terminalOutputStore.ts  terminalStore.ts  themeStore.ts  transferStore.ts
src/types/: index.ts
